# morphrs-py

./: .gitignore  Cargo.toml  LICENSE  README.md  dev_requirements.txt  pyproject.toml  test.ipynb  test.py
.github/workflows/: CI.yml
src/: analyzer.rs  converters.rs  lib.rs  py_classes.rs
